# mapson

./: .cvsignore  .gitignore  .gitmodules  .shtool  .todo  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  Jamfile.v2  Makefile  Makefile.am  Makefile.in  NEWS  Odinfile  README  TODO  VERSION  accept-confirmation.cc  accept-confirmation.cpp  accept-confirmation.hh  accept-confirmation.hpp  address-db.cc  address-db.cpp  address-db.hh  address-db.hpp  bootstrap.sh  cfg.mk  config-sample  config.cc  config.cpp  config.hh  config.hpp  configure.ac  deliver.cc  deliver.cpp  deliver.hh  deliver.hpp  extract-addresses.cc  extract-addresses.cpp  (+50 more)
doc/: Makefile.am  building.inc  configfile.inc  index.xml  man-page.xml  mapson.xml  readme.xml
docs/: Makefile  description.inc  index.sgml  license.inc  mapson.1  mapson.sgml  mapson.texi  peti.css  readme.sgml  synopsis.inc
documentation/: .cvsignore  Makefile  building.inc  cmdloptions.inc  configfile.inc  description.inc  effectiveness.inc  index.sgml  license.inc  license.sgml  main.aap  man-page.sgml  mapson.sgml  peti.css  peti.dsl  principle.dia  principle.eps  principle1.dia  principle1.eps  principle2.dia  principle2.eps  purpose.inc  readme.sgml  synopsis.inc  updating.inc  user-manual.sgml
examples/: detect-mapson-rescue-mails.sh  expire-mapson-spool.sh  rfctext  ruleset
hashcash/: Makefile.am  example.c  fastmint_altivec_compact_2.c  fastmint_altivec_standard_1.c  fastmint_altivec_standard_2.c  fastmint_ansi_compact_1.c  fastmint_ansi_compact_2.c  fastmint_ansi_standard_1.c  fastmint_ansi_standard_2.c  fastmint_ansi_ultracompact_1.c  fastmint_library.c  fastmint_mmx_compact_1.c  fastmint_mmx_standard_1.c  hashcash.c  hashcash.h  libfastmint.c  libfastmint.h  libhc.c  libsha1.c  random.c  sdb.c  sdb.h  sha1.c  sha1.h  sha1test.c  sstring.c  sstring.h  timer.c  timer.h  types.h  utct.c  utct.h
source/: .cvsignore  Makefile  Odinfile  aclocal.m4  address-db.cc  address-db.hh  address_db.c  array.c  confirm.c  cookie.c  escape_from.c  extract-addresses.cc  extract-addresses.hh  fail_safe.c  forward_mail.c  get_user_name.c  home-dir.cc  home-dir.hh  home_dir.c  is_confirmation.c  loadfile.c  log.c  mail_rescue.c  mailbox_path.c  main.c  mapson.cc  mapson.h  md5.c  md5.h  myexceptions.h  parse_mail.c  process-ack.cc  process-ack.hh  rfc822mail.hh  ruleset.l  ruleset.y  save_to.c  spool.c  spool_dir.c  system-error.hh  (+1 more)
